--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -170,7 +170,7 @@ for(i in names(trait_list)){
 ```
 
 ## Figure 4: cTWAS discovers candidate genes for complex traits and provides insights on their molecular mechanisms 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE,fig.height=8, fig.width=10}
 folder_results_single <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/expression/"
 folder_results_multi <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/"
 trait <- "LDL-ukb-d-30780_irnt"
@@ -259,7 +259,7 @@ p2 <- ggplot(merged_result, aes(x = combined_pip,
   theme_minimal(base_size = 14)
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE,fig.height=5, fig.width=10}
 combined_plot <- (p1 | p2) + plot_layout(guides = "collect") & theme(legend.position = "bottom")
 print(combined_plot)
 ```
