--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -92,6 +92,8 @@ Validation
 
 [LDL, IBD: different qtl combination](realdata_final_combine_qtls.html)
 
+[PVE share pattern](realdata_final_PVE_share_pattern.html)
+
 ### Tissue selection
 
 Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue removed from non-psychiatric traits
